@@ -42,6 +42,7 @@ fonts 10 R I B BI CW H HB HX S1 S
 sizes 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
 24 25 26 27 28 29 30 31 32 33 34 35 36 38 40 44 48 54 60 72 0
 anysize
+lc_ctype
 res 720
 hor 1
 vert 1
